@@ -1,6 +1,6 @@
 Package: lattice
-Version: 0.17-23
-Date: 2009/04/28
+Version: 0.17-24
+Date: 2009/05/08
 Priority: recommended
 Title: Lattice Graphics
 Author: Deepayan Sarkar <deepayan.sarkar@r-project.org>
