@@ -23,16 +23,17 @@ panel.levelplot(x, y, z,
 panel.contourplot(\dots)
 }
 \arguments{
-  \item{x, y, z}{ variables defining the plot }
+  \item{x, y, z}{ Variables defining the plot. }
   \item{subscripts}{
-    integer vector indicating what subset of \code{x}, \code{y} and
-    \code{z} to draw
+    Integer vector indicating what subset of \code{x}, \code{y} and
+    \code{z} to draw.
   }
   \item{at}{
-    numeric vector specifying breakpoints for change in colors
+    Numeric vector giving breakpoints along the range of
+    \code{z}.  See \code{\link{levelplot}} for details.
   }
   \item{shrink}{
-    either a numeric vector of length 2 (meant to work as both x and y
+    Either a numeric vector of length 2 (meant to work as both x and y
     components), or a list with components x and y which are numeric
     vectors of length 2.  This allows the rectangles to be scaled
     proportional to the z-value. The specification can be made
@@ -41,7 +42,7 @@ panel.contourplot(\dots)
     shrinkage (corresponding to min and max of z).
   }
   \item{labels}{
-    either a logical scalar indicating whether the labels are to be
+    Either a logical scalar indicating whether the labels are to be
     drawn, or a character or expression vector giving the labels
     associated with the \code{at} values.  Alternatively, \code{labels}
     can be a list with the following components:
@@ -61,7 +62,7 @@ panel.contourplot(\dots)
     
   }
   \item{label.style}{
-    controls how label positions and rotation are determined.  A value
+    Controls how label positions and rotation are determined.  A value
     of \code{"flat"} causes the label to be positioned where the contour
     is flattest, and the label is not rotated.  A value of
     \code{"align"} causes the label to be drawn as far from the
@@ -71,23 +72,21 @@ panel.contourplot(\dots)
     boundaries.
   }
   \item{contour}{
-    logical, specifying whether contour lines should be
-    drawn
+    A logical flag, specifying whether contour lines should be drawn.
   }
   \item{region}{
-    logical, specifying whether inter-contour regions should be filled
-    with the appropriate color
+    A logical flag, specifying whether inter-contour regions should be
+    filled with the appropriate color.
   }
   \item{col, lty, lwd}{ graphical parameters for contour lines}
 %   \item{cex, col.text, font, fontfamily, fontface}{ graphical parameters for contour labels}
-  \item{\dots}{ extra parameters }
+  \item{\dots}{ Extra parameters. }
   \item{col.regions}{
-    a vector of colors used if \code{region=TRUE}.  Usually a subset of
-    the colors are used, the exact number being one more than the length
-    of \code{at}.  These are chosen to be roughly equally spaced along
-    \code{col.regions}.  In the unusual case when \code{col.regions} is
-    not longer than \code{at}, it is repeated to be as long as
-    necessary.
+    A vector of colors, or a function to produce a vecor of colors, to
+    be used if \code{region=TRUE}.  Each interval defined by \code{at}
+    is assigned a color, so the number of colors actually used is one
+    less than the length of \code{at}.  See \code{\link{level.colors}}
+    for details on how the color assignment is done.
   }
   \item{alpha.regions}{
     numeric scalar controlling transparency of facets
@@ -95,8 +94,7 @@ panel.contourplot(\dots)
 }
 
 \details{
-
-  The same function is used for both \code{levelplot} and
+  The same panel function is used for both \code{levelplot} and
   \code{contourplot} (which differ only in default values of some
   arguments). \code{panel.contourplot} is a simple wrapper to
   \code{panel.levelplot}.
@@ -106,7 +104,11 @@ panel.contourplot(\dots)
 } 
 
 \author{ Deepayan Sarkar \email{Deepayan.Sarkar@R-project.org}}
-\seealso{\code{\link{levelplot}}, \code{\link{contourLines}} }
+\seealso{
+  \code{\link{levelplot}},
+  \code{\link{level.colors}},
+  \code{\link{contourLines}}
+}
 \keyword{dplot}
 
 
